--- a/assets/card.css
+++ b/assets/card.css
@@ -71,7 +71,7 @@ body .bottom_bar{
     position: absolute;
     top: 56.1%;
     left: 7.7%;
-    width: 300%;
+    width: 120px;
     height: auto;
 }
 
